--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proyectoprueba",
+  "name": "react-router-dom",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,15 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.59.2"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
+    "vite": "^4.2.0"
   }
 }
